# btrainer

./: .envrc.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_scene_tables.py  1ef127d8a9b4_replace_difficulty_enum_with_string.py
data/annotations/gretillat/: VS-Lang-02-01.yaml  VS-Lang-02-02.yaml  VS-Lang-02-03.yaml  VS-Lang-02-04.yaml  VS-Lang-02-05.yaml  VS-Lang-02-06.yaml  VS-Lang-02-07.yaml  VS-Lang-02-08.yaml  VS-Lang-02-09.yaml  VS-Lang-02-10.yaml  VS-Lang-02-11.yaml  VS-Lang-02-12.yaml  VS-Lang-02-13.yaml  VS-Lang-02-14.yaml  VS-Lang-02-15.yaml  VS-Lang-02-16.yaml  VS-Lang-02-17a.yaml  VS-Lang-02-17b.yaml  VS-Lang-02-18.yaml  VS-Lang-02-19.yaml  VS-Lang-02-20.yaml  VS-Lang-02-21.yaml  VS-Lang-02-22.yaml  VS-Lang-02-23.yaml  VS-Lang-02-24.yaml  VS-Lang-02-25.yaml  VS-Lang-02-26.yaml  VS-Lang-02-27.yaml  VS-Lang-02-28.yaml  VS-Lang-02-29.yaml  VS-Lang-02-30.yaml  VS-Lang-02-31.yaml  VS-Lang-02-32.yaml  VS-Lang-02-33.yaml  VS-Lang-02-34.yaml  VS-Lang-02-35.yaml  VS-Lang-02-36.yaml  VS-Lang-02-37.yaml  VS-Lang-02-38.yaml  VS-Lang-02-39.yaml  (+60 more)
docs/: annotation_workflow.md  setup.md  visualization_coordinate_system.md
notebooks/: annotation_capture.ipynb
schema/: ball_contact_levels.yaml  effect_stages.yaml  scene_template.yaml
scripts/: env.sh  extract_width_gather.py  extract_width_gather_text.py
src/: config.py
src/db/: base.py  models.py  schemas.py  session.py
src/services/: ingest.py
src/tools/: capture_scene.py  visualize_scene.py
tests/: test_scene_schema.py
(+1 files in other folders)
